cluster/production/default/sonarr/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sonarr-svc
  namespace: default
  labels:
    app: sonarr-svc
spec:
  type: ClusterIP
  ports:
  - port: 8989
    protocol: TCP
  selector:
    app: sonarr
