cluster/production/default/sonarr/IngressRoute.yaml

apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: sonarr-ing-route
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
  - websecure
  routes:
  - match: Host(`sonarr.dcunha.io`)
    kind: Rule
    services:
    - name: sonarr-svc
      port: 8989
    middlewares:
    - name: default-headers
  tls:
    secretName: dcunha-io-tls
